--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 version: "3.5"
 
 services:
-  signal-api:
-    image: bbernhard/signal-cli-rest-api
+   kyoko:
+    container_name: python-kyoko
+    build: .
     restart: always
-    ports:
-      - ${SIGNAL_API_PORT:-8080}:8080
     volumes:
-      - .local/share/signal-cli:/home/.local/share/signal-cli
-    environment:
-      MODE: normal
+      - .:/app
