--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,16 @@ services:
     restart: always
     volumes:
       - .:/app
+
+    ollama:
+        container_name: ollama
+        image: ollama/ollama
+        volumes:
+            - ollama:/root/.ollama
+        ports:
+            - 11434:11434
+
+volumes:
+    ollama:
+        external: true
+        name: ollama
