--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backports.zoneinfo==0.2.1
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
 cryptography==42.0.5
 exceptiongroup==1.2.0
 h11==0.14.0
@@ -18,9 +19,11 @@ pycparser==2.21
 python-dotenv==1.0.1
 python-telegram-bot==21.0.1
 pytz==2024.1
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.1
 socksio==1.0.0
 tornado==6.4
 typing_extensions==4.10.0
 tzlocal==5.2
+urllib3==2.2.1
