ollama API through internal docker network

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
 TELEGRAM_TOKEN="<your-bot-telegram-token"
 OWNER_ID=<id-of-telegram-user>
-OLLAMA_API_URL="http://localhost:11434/api"
+OLLAMA_API_URL="http://ollama:11434/api"
 OLLAMA_MODEL="dolphin-mixtral"
